--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
                                     tap on any meal to take you to the details,
                                     you can go to your favorites by clicking on the icon
                                     in the toolbar or the navigation drawer.</string>
+    <string name="not_fetched">Error: Data is not fetched</string>
 </resources>
