Fixed the constraint layout of the recipe page (v1)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RecipeApp</string>
+    <string name="SendToEmailButton">Send</string>
+    <string name="EmailSenderHeader">Send the recipe to your e-mail: </string>
+    <string name="categoryHeader">Category: </string>
 </resources>
