--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,15 @@
     <string name="subtitleNatalia">Recipe</string>
     <string name="subtitleCaner">Favorites</string>
     <string name="homeItem">You clicked on home</string>
+    <string name ="cookItem">You clicked on cook</string>
+    <string name="favoriteItem">You clicked on favourites</string>
+    <string name="helpItem">You clicked on help</string>
+    <string name="weFound">We found </string>
+    <string name="results"> results</string>
+    <string name="dataNotFetched">Data not fetched</string>
+    <string name="recipeFor">Recipe for </string>
+    <string name="emailWasSent">Email was sent</string>
+    <string name="emailWasNOTSent">Email was not sent</string>
+    <string name="recipes">Recipes</string>
+
 </resources>
