--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -32,4 +32,5 @@
     <string name="emailWasSent">Email foi enviado</string>
     <string name="emailWasNOTSent">Email não foi enviado</string>
     <string name="recipes">Receitas</string>
+    <string name="search_example">eg. canadian / french / italian / greek</string>
 </resources>
