--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -32,5 +32,9 @@
     <string name="emailWasSent">Email foi enviado</string>
     <string name="emailWasNOTSent">Email não foi enviado</string>
     <string name="recipes">Receitas</string>
-    <string name="search_example">eg. canadian / french / italian / greek</string>
+    <string name="search_example">exemplo: canadense / francesa / italiana / grega</string>
+    <string name="makeChoice">Escolha</string>
+    <string name="detailsOrRemove">Você deseja remover os detalhes ou remover dos favoritos</string>
+    <string name="seeDetails">Ver detalhes</string>
+    <string name="removeItem">Remover</string>
 </resources>
